--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <div class="big">I have bad news for you</div>
         <div class="small">The page you are looking  for might be removed or is temporarily unavailable</div>
         <a href="#">
+          <p>feature a</p>
           <input type="button" id="btn" value="BACK TO HOMEPAGE"/>
         </a>
       </div>
