--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <div class="small">The page you are looking  for might be removed or is temporarily unavailable</div>
         <a href="#">
           <p>feature a</p>
-          <p>かきくけこ</p>
+          <p>さしすせそ</p>
           <input type="button" id="btn" value="BACK TO HOMEPAGE"/>
         </a>
       </div>
